format code;add action links

--- a/src/main/webapp/WEB-INF/messages/messages_zh_CN.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_zh_CN.properties
@@ -1,5 +1,12 @@
 welcome.title=欢迎
+button.back=返回
 button.delete=删除
 button.edit=编辑
+button.new=新建
+button.show=查看
 sign_in.title=登陆
 sign_up.title=注册
+blogs.list=博客列表
+blogs.show=查看博客
+blogs.new=新建博客
+blogs.edit=编辑博客
